--- a/index.html
+++ b/index.html
@@ -379,21 +379,9 @@
       <div style="display:grid; grid-template-columns:1fr; gap:18px;">
         <div class="map-wrap" aria-hidden="false">
           <!-- Ganti src embed dengan koordinat lokasi apabila perlu -->
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63333.00000000001!2d107.81000000000002!3d-6.560000000000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e697b9d00000001%3A0xabcdef1234567890!2sCiater%2C%20Subang!5e0!3m2!1sid!2sid!4v1600000000000"
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-            title="Peta Lokasi Asstro Heritage"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.7676819173084!2d107.63000497356529!3d-6.918353967710605!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e70076198639%3A0xbca4178179aa83f8!2sAsstro%20Heritage!5e0!3m2!1sid!2sid!4v1765172509332!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
-        <div style="text-align:center;">
-          <p style="color:var(--muted); margin-bottom:8px;">Untuk info lebih lanjut, hubungi:</p>
-          <div class="contact-row" role="group" aria-label="contact">
-            <div class="contact-card">
-              <div style="font-weight:700;">Admin</div>
-              <div style="color:var(--muted); margin-left:8px;">0821-xxxx-xxxx</div>
-            </div>
-            <a class="wa-btn" href="https://wa.me/62821xxxxxxxx" target="_blank" rel="noopener">Chat WhatsApp</a>
           </div>
         </div>
       </div>
