--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
       </div>
       <div>
         <strong>Dresscode</strong>
-        <small>Busana Bebas, Sopan & Rapi</small>
+        <small>Busana Bebas, Rapi, dan Nyaman</small>
       </div>
     </div>
   </div>
