--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     .hero {
       height:100vh;
       min-height:640px;
-      background: url('/assets/hero-fasad.png') center/cover no-repeat;
+      background: url('/assets/fasad2.png') center/cover no-repeat;
       display:flex;
       align-items:center;
       justify-content:center;
@@ -166,19 +166,24 @@
     .meta small{ color:var(--muted); display:block; }
 
     /* gallery */
-    .gallery{
-      display:grid;
-      grid-template-columns:repeat(auto-fit,minmax(200px,1fr));
-      gap:14px;
-      margin-top:12px;
-    }
-    .gallery img{
-      width:100%;
-      height:180px;
-      object-fit:cover;
-      border-radius:12px;
-      box-shadow:0 6px 18px rgba(0,0,0,0.08);
-    }
+/* Gallery Center */
+.gallery-single{
+  display:flex;
+  justify-content:center;
+  align-items:center;
+}
+
+.gallery-single img{
+  width:100%;
+  max-width:600px;     /* 🔥 biar gak terlalu lebar */
+  height:300px;
+  object-fit:cover;
+  border-radius:16px;
+  box-shadow:0 6px 20px rgba(0,0,0,0.08);
+  margin:0 auto;
+  display:block;
+}
+
 
     /* RSVP */
     .rsvp-wrap{
@@ -321,20 +326,51 @@
   text-align: center;
 }
 
-/* Agenda */
-.agenda {
+/* Section */
+.org-section {
+  padding: 50px 20px;
+  background: #fff;
   text-align: center;
-  margin-top: 26px;
 }
 
-.agenda p {
-  color: var(--muted);
-  margin-top: 8px;
-  max-width: 760px;
-  margin-left: auto;
-  margin-right: auto;
-  line-height: 1.6;
+.org-section h2 {
+  font-size: 26px;
+  margin-bottom: 40px;
 }
+
+.agenda-cards{
+  padding:36px 16px;
+  max-width:520px;   /* 🔥 biar card pendek */
+  margin:0 auto;
+}
+
+.agenda-cards h2{
+  text-align:center;
+  font-size:26px;
+  margin-bottom:20px;
+}
+
+.agenda-card{
+  background:#fff;
+  border-radius:14px;
+  padding:14px 16px;
+  font-size:14px;
+  box-shadow:0 4px 14px rgba(0,0,0,0.05);
+  margin-bottom:10px;
+  text-align:center;  /* ✅ tulisan tengah */
+}
+
+.agenda-card .time{
+  font-weight:600;
+  color:#ff0000;
+  font-size:13px;
+}
+
+.agenda-card .text{
+  margin-top:4px;
+}
+
+
 
   </style>
 </head>
@@ -346,9 +382,9 @@
       <img src="assets/Asstro heritage w.png" alt="Asstro Heritage Logo" class="logo" />
       <h1 class="hero-title">Grand Opening — Asstro Heritage</h1>
       <div class="hero-sub">
-  Kepada Yth:<br>
-  <strong id="guestName" style="font-size:22px;">Tamu Undangan</strong>
-  <div id="guestInfo" style="margin-top:6px;font-size:16px;opacity:.9;"></div><br>
+      Kepada Yth:<br>
+      <strong id="guestName" style="font-size:22px;">Tamu Undangan</strong>
+      <div id="guestInfo" style="margin-top:6px;font-size:16px;opacity:.9;"></div><br>
 
   <span>
     Kami dengan hangat mengundang Anda menghadiri peresmian Asstro Heritage — destinasi baru untuk pengalaman alam, rekreasi, dan kuliner.
@@ -428,40 +464,36 @@
     </div>
   </div>
 
-  <div style="margin-top:18px; text-align:center;">
-  <strong>Agenda Singkat</strong>
-  <ul style="
-    color:var(--muted); 
-    max-width:820px; 
-    margin:12px auto 0; 
-    list-style:none; 
-    padding:0;
-    text-align:center;
-    line-height:1.6;
-  ">
-    <li>Pembukaan — 14:00 WIB</li>
-    <li>Pembacaan Ayat Suci Al-Qur’an</li>
-    <li>Sambutan</li>
-    <li>Santunan Anak Yatim Piatu</li>
-    <li>Tausiyah & Doa</li>
-    <li>Gunting Pita</li>
-    <li>Tour Area</li>
-    <li>Ceremonial Potong Tumpeng</li>
-    <li>Ramah Tamah</li>
-    <li>Hiburan (Band Titanium)</li>
-  </ul>
-</div>
+<section class="agenda-cards">
+  <h2>Agenda Acara</h2>
+
+  <div class="agenda-card">
+    
+    <div class="text">Pembukaan</div> <div class="time">Pukul 14:00 WIB</div>
+  </div>
+
+  <div class="agenda-card">Pembacaan Ayat Suci Al-Qur’an</div>
+  <div class="agenda-card">Sambutan</div>
+  <div class="agenda-card">Santunan Anak Yatim Piatu</div>
+  <div class="agenda-card">Tausiyah & Doa</div>
+  <div class="agenda-card">Gunting Pita</div>
+  <div class="agenda-card">Tour Area</div>
+  <div class="agenda-card">Ceremonial Potong Tumpeng</div>
+  <div class="agenda-card">Ramah Tamah</div>
+  <div class="agenda-card">Hiburan (Band Titanium)</div>
 </section>
 
-    <!-- Galeri -->
-    <section class="card" id="gallery" aria-labelledby="gallery-title">
-      <h2 id="gallery-title">Galeri</h2>
-      <div class="gallery">
-        <img src="assets/fasad.jpg" alt="Galeri 1">
-        <img src="assets/fasad.jpg" alt="Galeri 2">
-        <img src="assets/fasad.jpg" alt="Galeri 3">
-      </div>
-    </section>
+</section>
+
+<!-- Galeri -->
+<section class="card" id="gallery" aria-labelledby="gallery-title">
+  <h2 id="gallery-title">Galeri</h2>
+
+  <div class="gallery-single">
+    <img src="assets/Asstro Heritage.png" alt="Galeri Asstro Heritage">
+  </div>
+</section>
+
 
 
     <!-- Map & Contact -->
