--- a/index.html
+++ b/index.html
@@ -9,6 +9,90 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Playfair+Display:wght@500;700&display=swap" rel="stylesheet">
 
   <style>
+
+/* ===== ANIMATIONS ===== */
+
+/* fade & slide hero */
+@keyframes fadeUp {
+  from {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+/* zoom-in logo */
+@keyframes zoomIn {
+  from {
+    opacity: 0;
+    transform: scale(0.85);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+/* smooth pulse countdown */
+@keyframes pulseSoft {
+  0% { transform: scale(1); }
+  50% { transform: scale(1.05); }
+  100% { transform: scale(1); }
+}
+
+/* shimmer background */
+@keyframes shimmer {
+  0% { background-position: -200px 0; }
+  100% { background-position: 200px 0; }
+}
+
+/* apply animations */
+.logo {
+  animation: zoomIn 1.2s ease-out;
+}
+
+.hero-title {
+  animation: fadeUp 1s ease-out 0.2s both;
+}
+
+.hero-sub {
+  animation: fadeUp 1s ease-out 0.4s both;
+}
+
+.hero-pills {
+  animation: fadeUp 1s ease-out 0.6s both;
+}
+
+.hero-countdown .cd-box {
+  animation: pulseSoft 1.5s infinite ease-in-out;
+}
+
+/* card reveal on scroll */
+.card {
+  opacity: 0;
+  transform: translateY(40px);
+  transition: all 0.8s ease;
+}
+
+.card.show {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+/* Hover anim */
+.agenda-card {
+  transition: all .3s ease;
+}
+
+.agenda-card:hover {
+  transform: translateY(-3px) scale(1.01);
+  box-shadow: 0 10px 30px rgba(0,0,0,0.08);
+}
+
+
     :root{
       --dark:#1e2a22;
       --accent:#b33a2f;
@@ -439,7 +523,7 @@
       </div>
       <div>
         <strong>Tanggal & Waktu</strong>
-        <small>Jum'at, 12 Desember 2025 — 14:00 WIB</small>
+        <small>Jum'at, 12 Desember 2025 <br> Pukul 14:00 WIB</small>
       </div>
     </div>
 
@@ -449,7 +533,7 @@
       </div>
       <div>
         <strong>Lokasi</strong>
-        <small>Highland Ciater, Subang — Jawa Barat</small>
+        <small>Asstro Heritage <br> Laswi — Bandung</small>
       </div>
     </div>
 
@@ -459,7 +543,7 @@
       </div>
       <div>
         <strong>Dresscode</strong>
-        <small>Busana Bebas, Rapi, dan Nyaman</small>
+        <small>Busana Bebas, <br> Rapi, dan Nyaman</small>
       </div>
     </div>
   </div>
@@ -469,7 +553,7 @@
 
   <div class="agenda-card">
     
-    <div class="text">Pembukaan</div> <div class="time">Pukul 14:00 WIB</div>
+    <div class="text">Pembukaan</div>
   </div>
 
   <div class="agenda-card">Pembacaan Ayat Suci Al-Qur’an</div>
@@ -526,6 +610,27 @@
   <audio id="bgm" src="assets/ceremony.mp3" loop preload="auto"></audio>
 
   <script>
+
+    // ===== Scroll Animation (Card Muncul Saat Di-scroll)
+const cards = document.querySelectorAll('.card');
+
+const observer = new IntersectionObserver((entries) => {
+  entries.forEach(entry => {
+    if(entry.isIntersecting){
+      entry.target.classList.add('show');
+    }
+  });
+}, { threshold: 0.15 });
+
+cards.forEach(card => observer.observe(card));
+
+// ===== Smooth parallax effect di hero
+window.addEventListener('scroll', () => {
+  const hero = document.querySelector('.hero');
+  const scrolled = window.scrollY;
+  hero.style.backgroundPositionY = `${scrolled * 0.4}px`;
+});
+
     
 (function(){
     const params = new URLSearchParams(window.location.search);
