--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
       </div>
       <p class="ucapan">
         <span>
-          Kami dengan hangat mengundang Anda menghadiri peresmian Asstro Heritage — destinasi baru untuk pengalaman alam, rekreasi, dan kuliner.
+          Dengan hormat kami mengundang Anda menghadiri peresmian Asstro Heritage — destinasi baru untuk pengalaman alam, rekreasi, dan kuliner.
         </span>
       </p>
 
