--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
       </div>
       <p class="ucapan">
         <span>
-        Kami dengan hangat mengundang untuk menghadiri peresmian <b>Asstro Heritage</b> dengan Experience berkuliner di nuansa arsitektur heritage.         </span>
+        Kami dengan hangat mengundang Bapak/Ibu untuk menghadiri peresmian <b>Asstro Heritage</b> dengan Experience berkuliner di nuansa arsitektur heritage.         </span>
       </p>
 
 
