--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Grand Opening — Asstro Heritage</title>
-  <meta name="description" content="Undangan digital peresmian Asstro Heritage — Grand Opening" />
+  <title>Grand Opening — Asstro Punclut</title>
+  <meta name="description" content="Undangan digital peresmian Asstro Punclut — Grand Opening" />
   <meta name="theme-color" content="#0f172a" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Playfair+Display:wght@500;700&display=swap" rel="stylesheet">
 
@@ -443,10 +443,10 @@
 <body>
 
   <!-- HERO -->
-  <header class="hero" role="banner" aria-label="Hero Asstro Heritage">
+  <header class="hero" role="banner" aria-label="Hero Asstro Punclut">
     <div class="hero-inner">
-      <img src="assets/Asstro heritage w.png" alt="Asstro Heritage Logo" class="logo" />
-      <h1 class="hero-title">Grand Opening — Asstro Heritage</h1>
+      <img src="assets/Asstro-Punclut.png" alt="Asstro Punclut Logo" class="logo" />
+      <h1 class="hero-title">Grand Opening — Asstro Punclut</h1>
       <div class="hero-sub">
       <h4>Kepada Yth:</h4>
      <strong id="guestName">Tamu Undangan</strong>
@@ -454,31 +454,31 @@
       </div>
       <p class="ucapan">
         <span>
-        Kami dengan hangat mengundang Bapak/Ibu untuk menghadiri peresmian <b>Asstro Heritage</b> dengan Experience berkuliner di nuansa arsitektur heritage.         </span>
+        Kami dengan hangat mengundang Bapak/Ibu untuk menghadiri peresmian <b>Asstro Punclut</b> dengan Experience berkuliner di nuansa arsitektur heritage.         </span>
       </p>
 
 
       <div class="hero-pills" aria-hidden="false">
-        <div class="pill">Jum'at, 12 Desember 2025</div>
+        <div class="pill">Kamis, 25 Desember 2025</div>
         <div class="pill">14:00 WIB — Selesai</div>
-        <div class="pill">Asstro Heritage Laswi</div>
+        <div class="pill">Asstro Punclut</div>
       </div>
 
       <div class="hero-countdown" style="margin-top:18px;">
         <div class="cd-box" aria-live="polite">
-          <span class="cd-val" id="cd-days">--</span>
+          <span class="cd-val" id="2">--</span>
           <span class="cd-label">Hari</span>
         </div>
         <div class="cd-box">
-          <span class="cd-val" id="cd-hours">--</span>
+          <span class="cd-val" id="09">--</span>
           <span class="cd-label">Jam</span>
         </div>
         <div class="cd-box">
-          <span class="cd-val" id="cd-min">--</span>
+          <span class="cd-val" id="50">--</span>
           <span class="cd-label">Menit</span>
         </div>
         <div class="cd-box">
-          <span class="cd-val" id="cd-sec">--</span>
+          <span class="cd-val" id="15">--</span>
           <span class="cd-label">Detik</span>
         </div>
       </div>
@@ -491,7 +491,7 @@
     <!-- Sambutan -->
     <section class="card" id="sambutan" aria-labelledby="sambutan-title">
       <h2 id="sambutan-title">Sambutan Pembuka</h2>
-      <p class="lead-center">Dengan penuh rasa syukur, kami mengundang Bapak/Ibu yang terhormat untuk menghadiri <b>Grand Opening Asstro Heritage Laswi.</b> Asstro Group hadir dengan nuansa arsitektur heritage yang membangkitkan nostalgia, menghadirkan kenyamanan, kehangatan, serta pengalaman yang berkesan. Kehadiran Bapak/Ibu merupakan sebuah kehormatan bagi kami.</p>
+      <p class="lead-center">Dengan penuh rasa syukur, kami mengundang Bapak/Ibu yang terhormat untuk menghadiri <b>Grand Opening Asstro Punclut Laswi.</b> Asstro Group hadir dengan nuansa arsitektur heritage yang membangkitkan nostalgia, menghadirkan kenyamanan, kehangatan, serta pengalaman yang berkesan. Kehadiran Bapak/Ibu merupakan sebuah kehormatan bagi kami.</p>
     </section>
 
    <!-- Detail Acara -->
@@ -515,7 +515,7 @@
       </div>
       <div>
         <strong>Lokasi</strong>
-        <small>Asstro Heritage <br> Laswi — Bandung</small>
+        <small>Asstro Punclut <br> Laswi — Bandung</small>
       </div>
     </div>
 
@@ -556,7 +556,7 @@
   <h2 id="gallery-title">Galeri</h2>
 
   <div class="gallery-single">
-    <img src="assets/Asstro Heritage.png" alt="Galeri Asstro Heritage">
+    <img src="assets/Asstro Punclut.png" alt="Galeri Asstro Punclut">
   </div>
 </section>
 
@@ -569,8 +569,7 @@
       <div style="display:grid; grid-template-columns:1fr; gap:18px;">
         <div class="map-wrap" aria-hidden="false">
           <!-- Ganti src embed dengan koordinat lokasi apabila perlu -->
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.7676819173084!2d107.63000497356529!3d-6.918353967710605!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e70076198639%3A0xbca4178179aa83f8!2sAsstro%20Heritage!5e0!3m2!1sid!2sid!4v1765172509332!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3961.372464570121!2d107.61867117499584!3d-6.845874593152347!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zNsKwNTAnNDUuMiJTIDEwN8KwMzcnMTYuNSJF!5e0!3m2!1sid!2sid!4v1766387063896!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        </div>
 
           </div>
         </div>
@@ -580,7 +579,7 @@
   </main>
 
   <footer role="contentinfo">
-    © 2025 Asstro Heritage — Undangan Grand Opening. Simpan halaman ini untuk info & update.
+    © 2025 Asstro Punclut — Undangan Grand Opening. Simpan halaman ini untuk info & update.
   </footer>
 
 <!-- Audio controls -->
