--- a/index.html
+++ b/index.html
@@ -461,24 +461,24 @@
       <div class="hero-pills" aria-hidden="false">
         <div class="pill">Kamis, 25 Desember 2025</div>
         <div class="pill">14:00 WIB — Selesai</div>
-        <div class="pill">Asstro Punclut</div>
+        <div class="pill">Asstro Punclut Laswi</div>
       </div>
 
       <div class="hero-countdown" style="margin-top:18px;">
         <div class="cd-box" aria-live="polite">
-          <span class="cd-val" id="2">--</span>
+          <span class="cd-val" id="cd-days">2</span>
           <span class="cd-label">Hari</span>
         </div>
         <div class="cd-box">
-          <span class="cd-val" id="09">--</span>
+          <span class="cd-val" id="cd-hours">09</span>
           <span class="cd-label">Jam</span>
         </div>
         <div class="cd-box">
-          <span class="cd-val" id="50">--</span>
+          <span class="cd-val" id="cd-min">37</span>
           <span class="cd-label">Menit</span>
         </div>
         <div class="cd-box">
-          <span class="cd-val" id="15">--</span>
+          <span class="cd-val" id="cd-sec">30</span>
           <span class="cd-label">Detik</span>
         </div>
       </div>
