--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     .hero {
       height:100vh;
       min-height:640px;
-      background: url('/assets/fasad2.png') center/cover no-repeat;
+      background: url('/assets/Asstro-Punclut-1.png') center/cover no-repeat;
       display:flex;
       align-items:center;
       justify-content:center;
